--- a/Games/XPuzzle/_Imports.razor
+++ b/Games/XPuzzle/_Imports.razor
@@ -10,4 +10,6 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
+@using BasicGameFrameworkLibrary.Blazor.BasicControls.GameBoards;
+@using XPuzzle.Core
 @using BlazorMVVMHelpersLibrary
