--- a/Games/DutchBlitz/_Imports.razor
+++ b/Games/DutchBlitz/_Imports.razor
@@ -22,4 +22,4 @@
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.Hands;
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.DrawPiles;
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.SingleMiscPiles;
-@using BasicGameFrameworkLibrary.Core.RegularDeckOfCards;
+@using BasicGameFrameworkLibrary.Blazor.BasicControls.MultipleFrameContainers;
