Improvements to Multiplayer Loader. Including knowing whether it was really using home. Exra logic so things can happen depending on whether you are using home networks.

--- a/Standard/BasicGameFrameworkLibrary/Blazor/Shells/MultiplayerBasicParentShell.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/Shells/MultiplayerBasicParentShell.razor
@@ -43,7 +43,7 @@
                                 }
                                 <GameButtonComponent CustomCallBack="aa.BackToMainDelegate" Display="Back To Main" />
                             }
-                            @if (bb.TransferToDesktop is not null && Media!.DeviceCategory != EnumDeviceCategory.Phone)
+                            @if (bb.TransferToDesktop is not null && Media!.DeviceCategory != EnumDeviceCategory.Phone &&  BasicGameFrameworkLibrary.Core.MiscProcesses.GlobalVariables.DoUseHome )
                             {
                                 <GameButtonComponent CustomCallBack="TransferToDesktop" Display="Transfer To Desktop" />
                             }
