Added improvement where it now records the last game played so you can go into the last game you actually played. Of course, even if the game was over, then still same thing unless i make it clear out because game was over.

--- a/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
+++ b/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
@@ -20,9 +20,17 @@
             <TopContent>
                 @if (GlobalClass.Multiplayer)
                 {
-                    <div>
-                        <GameButtonComponent CustomCallBack="OpenSettings" Display="Show Settings" />
-                    </div>
+                    <StackLayout>
+                        <StackItem>
+                            <GameButtonComponent CustomCallBack="OpenSettings" Display="Show Settings" />
+                        </StackItem>
+                        @if (_previousGame != "")
+                        {
+                            <StackItem>
+                                <GameButtonComponent CustomCallBack="OpenPreviousGame" Display="@OpenText" />
+                            </StackItem>
+                        }
+                    </StackLayout>  
                 }
             </TopContent>
             <MainContent>
