--- a/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
+++ b/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
@@ -27,7 +27,7 @@
                         @if (_previousGame != "")
                         {
                             <StackItem>
-                                <GameButtonComponent CustomCallBack="OpenPreviousGame" Display="@OpenText" />
+                                <GameButtonComponent CustomCallBack="OpenPreviousGame" Display="@_previousGame" />
                             </StackItem>
                         }
                     </StackLayout>  
