--- a/Standard/BasicGameFrameworkLibrary/Blazor/Shells/MultiplayerBasicParentShell.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/Shells/MultiplayerBasicParentShell.razor
@@ -1,7 +1,7 @@
 ﻿@using BlazorMVVMHelpersLibrary
 @using BasicGameFrameworkLibrary.Blazor.Views
 @using aa = BasicGameFrameworkLibrary.Blazor.Helpers.LoaderGlobalClass;
-@using bb = BasicGameFrameworkLibrary.Core.MiscProcesses.GlobalDelegates;
+@*@using bb = BasicGameFrameworkLibrary.Core.MiscProcesses.GlobalDelegates;*@
 @using BasicGameFrameworkLibrary.Core.TestUtilities
 @using BasicBlazorLibrary.Components.MediaQueries.ParentClasses
 @if (BasicData == null || GameData == null)
@@ -43,10 +43,10 @@
                                 }
                                 <GameButtonComponent CustomCallBack="aa.BackToMainDelegate" Display="Back To Main" />
                             }
-                            @if (bb.TransferToDesktop is not null && Media!.DeviceCategory != EnumDeviceCategory.Phone &&  BasicGameFrameworkLibrary.Core.MiscProcesses.GlobalVariables.DoUseHome )
+                            @*@if (bb.TransferToDesktop is not null && Media!.DeviceCategory != EnumDeviceCategory.Phone &&  BasicGameFrameworkLibrary.Core.MiscProcesses.GlobalVariables.DoUseHome  )
                             {
                                 <GameButtonComponent CustomCallBack="TransferToDesktop" Display="Transfer To Desktop" />
-                            }
+                            }*@
                             @if (TestData!.ShowNickNameOnShell)
                             {
                                 <span style="font-size: 5vh; margin-right: 10px;">
