Fixed bug on Eight Off Solitaire where I forgot to import the hands for eight off solitaire game.

--- a/Games/EightOffSolitaire/_Imports.razor
+++ b/Games/EightOffSolitaire/_Imports.razor
@@ -19,3 +19,4 @@
 @using BasicGameFrameworkLibrary.Core.SolitaireClasses.PileObservable;
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SolitaireClasses;
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.MultipleFrameContainers;
+@using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.Hands;
