--- a/Games/ClueBoardGame/Blazor/GameBoardBlazor.razor
+++ b/Games/ClueBoardGame/Blazor/GameBoardBlazor.razor
@@ -11,51 +11,17 @@
                    FileName="board.svg"
                    Width="@gg.OriginalSize.Width.ToString()"
                    Height="@gg.OriginalSize.Height.ToString()" />
-
     @if (GraphicsData.GameContainer!.RoomList.Count != 9)
     {
         return;
     }
     @{
-        int x = 0;
-        BasicList<WeaponInfo> weaponList;
         BasicList<CharacterInfo> characterList;
         SizeF spaceSize = new SizeF(gg.SpaceSize, gg.SpaceSize);
         PointF location;
-        RectangleF rect;
     }
-    @foreach (var room in GraphicsData.GameContainer.RoomList.Values)
-    {
-        x++;
-        if (room.Space == null)
-        {
-            return; //try this way.  did it before and somehow worked (?)
-        }
-        weaponList = GraphicsData.GameContainer.WeaponsInRoom(x);
-        characterList = GraphicsData.GameContainer.CharactersInRoom(x);
-        p.ClearArea(room.Space);
-        foreach (var weapon in weaponList)
-        {
-            location = p.GetPosition(room.Space, weapon.DefaultSize);
-            rect = new RectangleF(location, weapon.DefaultSize);
-            room.Space.PieceList.Add(rect);
-            p.AddRectToArea(room.Space, rect);
-            <BasePieceGraphics @key="GetKey" Location="location">
-                <WeaponBlazor Weapon="weapon" />
-            </BasePieceGraphics>
-        }
-        foreach (var character in characterList)
-        {
-            location = p.GetPosition(room.Space, spaceSize);
-            rect = new RectangleF(location, spaceSize);
-            //var roomKey = GetCharacterRoomKey(character, x);
-            room.Space.PieceList.Add(rect);
-            p.AddRectToArea(room.Space, rect);
-            <BasePieceGraphics @key="GetKey" Location="@location" LongestSize="@gg.SpaceSize">
-                <PawnPiece MainColor="@character.MainColor" />
-            </BasePieceGraphics>
-        }
-    }
+    <RoomGraphics GraphicsData="GraphicsData" />
+    
     @{
         characterList = GraphicsData.GameContainer.CharactersOnStart();
     }
