Added feature to start over again for Clue Board Game.

--- a/Games/ClueBoardGame/Blazor/Views/ClueBoardGameMainView.razor
+++ b/Games/ClueBoardGame/Blazor/Views/ClueBoardGameMainView.razor
@@ -40,6 +40,7 @@
             <GameButtonComponent CommandObject="PredictCommand" StartOnNewLine="true" Display="Predict" />
             <GameButtonComponent CommandObject="AccusationCommand" StartOnNewLine="true" Display="Accusation" />
             <GameButtonComponent CommandObject="EndCommand" StartOnNewLine="true" Display="End Turn" />
+            <GameButtonComponent CommandObject="StartOverCommand" StartOnNewLine="true" Display="Start Over" />
             <LabelGridComponent DataContext="DataContext!.VMData" Labels="_clues" />
         </div>
     </GridItem>
