Added support for arrow navigation for clue board game.

--- a/Games/ClueBoardGame/Blazor/DetectiveGraphicsBlazor.razor
+++ b/Games/ClueBoardGame/Blazor/DetectiveGraphicsBlazor.razor
@@ -2,7 +2,7 @@
 {
     return;
 }
-@if (DetectiveCategory == EnumDetectiveCategory.Prediction)
+@*@if (DetectiveCategory == EnumDetectiveCategory.Prediction)
 {
     <div style="margin-bottom: 10px">
         <DetectiveRawBoard TargetWidth="@pp.TargetGridWidth"
@@ -18,7 +18,7 @@
             </RawRectangle>
         </DetectiveRawBoard>
     </div>
-}
+}*@
 <DetectiveRawBoard TargetWidth="@pp.TargetGridWidth"
                    BoardSize="@pp.MainSize">
     @foreach (var item in DetectiveList.Values)
