Adding more possibilities for performance improvements. By allowing GraphicsCommands to be fixed. Which are useful for gameboards where only the location changes but would be changed because of key.  Helpful for cases where 2 objects can never be in same location for games like clue board game.

--- a/Games/ClueBoardGame/Blazor/GameBoardBlazor.razor
+++ b/Games/ClueBoardGame/Blazor/GameBoardBlazor.razor
@@ -27,7 +27,7 @@
     @foreach (var character in characterList)
     {
         location = GraphicsData.PositionForStartSpace(character.FirstNumber);
-        <BasePieceGraphics @key="location" Location="@location" LongestSize="@gg.SpaceSize">
+        <BasePieceGraphics @key="location" Location="@location" Fixed="true" LongestSize="@gg.SpaceSize">
             <PawnPiece MainColor="@character.MainColor" />
         </BasePieceGraphics>
     }
@@ -37,7 +37,7 @@
     @foreach (var character in characterList)
     {
         location = GraphicsData.PositionForBoardPiece(character.Space);
-        <BasePieceGraphics @key="location" Location="@location" LongestSize="@gg.SpaceSize">
+        <BasePieceGraphics @key="location" Location="@location" Fixed="true" LongestSize="@gg.SpaceSize">
             <PawnPiece MainColor="@character.MainColor" />
         </BasePieceGraphics>
     }
@@ -54,6 +54,7 @@
     {
         <BlankClickableSquare SpaceLocation="item.rect.Location"
                               SpaceSize="item.rect.Size"
+                              Fixed = "true"
                               SpaceClicked="() => RoomClickedAsync(item.id)" />
     }
     @* take advantage that the square will override the room part. *@
@@ -64,6 +65,7 @@
     {
         <BlankClickableSquare SpaceLocation="item.rect.Location"
                               SpaceSize="item.rect.Size"
+                              Fixed = "true"
                               SpaceClicked="() => SpaceClickedAsync(item.id)" />
     }
 </RawGameBoard>
