Added feature to skip players if there are more than 2 players.

--- a/Games/Phase10/Blazor/Views/Phase10MainView.razor
+++ b/Games/Phase10/Blazor/Views/Phase10MainView.razor
@@ -32,8 +32,20 @@
         <TempSetsBlazor TargetContainerSize="65vh"
                         TempPiles="_vmData.TempSets" />
     </StackItem>
+
     <StackItem>
-        <MainRummySetsBlazor ContainerHeight="65vh"
+        @if (NeedsToChooseSkip == false)
+        {
+            <MainRummySetsBlazor ContainerHeight="65vh"
                              DataContext="_vmData.MainSets" />
+        }
+        else
+        {
+            <ListChooserBlazor ListPicker="@_vmData.PlayerPicker" />
+            <div style="margin-top: 20px;">
+                <GameButtonComponent CommandObject="SKipCommand" Display="Submit Chosen Player To Skip" />
+            </div>
+            
+        }
     </StackItem>
 </StackLayout>
