--- a/Games/Phase10/_Imports.razor
+++ b/Games/Phase10/_Imports.razor
@@ -25,3 +25,4 @@
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.TempRummySets;
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.MainRummySets;
 @using BasicGameFrameworkLibrary.Core.ColorCards;
+@using BasicGameFrameworkLibrary.Blazor.BasicControls.ChoicePickers;
