--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/YahtzeeControls/YahtzeeFooter.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/YahtzeeControls/YahtzeeFooter.razor
@@ -1,9 +1,9 @@
-﻿@using gg = YahtzeeControlGlobalSettings;
+﻿@using gg1 = YahtzeeControlGlobalSettings;
 <YahtzeeField Row="@RowNumber"
               Column="1"
               SpanColumn="true">
-    <CenteredSvgText FontSize="@gg.DescriptionFontSize" Text="@Text" IsBold="true" />
+    <CenteredSvgText FontSize="@gg1.DescriptionFontSize" Text="@Text" IsBold="true" />
 </YahtzeeField>
 <YahtzeeField Row="@RowNumber" Column="3">
-    <CenteredSvgText FontSize="@gg.ScoreFontSize" Text="@TotalScore.ToString()" />
+    <CenteredSvgText FontSize="@gg1.ScoreFontSize" Text="@TotalScore.ToString()" />
 </YahtzeeField>
