--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/YahtzeeControls/YahtzeeHeader.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/YahtzeeControls/YahtzeeHeader.razor
@@ -1,20 +1,20 @@
-﻿@using gg = YahtzeeControlGlobalSettings;
+﻿@using gg1 = YahtzeeControlGlobalSettings;
 <YahtzeeField Row="1" Column="1">
-    <CenteredSvgText IsBold="true" FontSize="@gg.DescriptionFontSize" Text="Description" />
+    <CenteredSvgText IsBold="true" FontSize="@gg1.DescriptionFontSize" Text="Description" />
 </YahtzeeField>
 <YahtzeeField Row="1" Column="2">
     <svg height="100">
-        <CenteredSvgText IsBold="true" FontSize="@gg.DescriptionFontSize" Text="Possible" />
+        <CenteredSvgText IsBold="true" FontSize="@gg1.DescriptionFontSize" Text="Possible" />
     </svg>
     <svg y="100" height="100">
-        <CenteredSvgText IsBold="true" FontSize="@gg.DescriptionFontSize" Text="Points" />
+        <CenteredSvgText IsBold="true" FontSize="@gg1.DescriptionFontSize" Text="Points" />
     </svg>
 </YahtzeeField>
 <YahtzeeField Row="1" Column="3">
     <svg height="100">
-        <CenteredSvgText IsBold="true" FontSize="@gg.DescriptionFontSize" Text="Points" />
+        <CenteredSvgText IsBold="true" FontSize="@gg1.DescriptionFontSize" Text="Points" />
     </svg>
     <svg y="100" height="100">
-        <CenteredSvgText IsBold="true" FontSize="@gg.DescriptionFontSize" Text="Obtained" />
+        <CenteredSvgText IsBold="true" FontSize="@gg1.DescriptionFontSize" Text="Obtained" />
     </svg>
 </YahtzeeField>
