--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/YahtzeeControls/YahtzeeRowBlazor.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/YahtzeeControls/YahtzeeRowBlazor.razor
@@ -1,23 +1,23 @@
 ﻿@using BasicGameFrameworkLibrary.Blazor.BasicControls.GameBoards
-@using gg = YahtzeeControlGlobalSettings;
+@using gg1 = YahtzeeControlGlobalSettings;
 <YahtzeeField Highlighted="@Highlighted"
               Row="@RowNumber"
               Column="1">
-    <CenteredSvgText FontSize="@gg.DescriptionFontSize"
+    <CenteredSvgText FontSize="@gg1.DescriptionFontSize"
                      Text="@Header" />
 </YahtzeeField>
 <YahtzeeField Highlighted="@Highlighted"
               Extra="@MiddleExtra"
               Row="@RowNumber"
               Column="2">
-    <CenteredSvgText FontSize="@gg.ScoreFontSize"
+    <CenteredSvgText FontSize="@gg1.ScoreFontSize"
                      TextColor="Red"
                      Text="@Possible" />
 </YahtzeeField>
 <YahtzeeField Highlighted="@Highlighted"
               Row="@RowNumber"
               Column="3">
-    <CenteredSvgText FontSize="@gg.ScoreFontSize"
+    <CenteredSvgText FontSize="@gg1.ScoreFontSize"
                      Text="@Obtained" />
 </YahtzeeField>
 @if (RowClicked.HasDelegate)
