--- a/Standard/BasicGameFrameworkLibrary/Blazor/StartupClasses/MainPage.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/StartupClasses/MainPage.razor
@@ -1,4 +1,8 @@
 ﻿@using BasicBlazorLibrary.Components.MediaQueries.ParentClasses
+
+<HeadContent>
+    <link href="_content/BasicGameFrameworkLibrary/custom.css" rel="stylesheet" />
+</HeadContent>
 <GamePackageFullScreen>
     @ChildContent
 </GamePackageFullScreen>
