Updated Mastermind to .net 7.

--- a/Games/Mastermind/Blazor/Views/GuessUI.razor
+++ b/Games/Mastermind/Blazor/Views/GuessUI.razor
@@ -1,12 +1,12 @@
 ﻿@inherits BasicGameView<GameBoardViewModel>
-@using gg = Global;
+@using gg1 = Global;
 @if (Guess == null || Guess.YourBeads.Count == 0)
 {
     return;
 }
 @foreach (Bead bead in Guess!.YourBeads)
 {
-    <BasePieceGraphics CommandParameter="bead" CommandObject="DataContext!.ChangeMindCommand" TargetWidth="@gg.BeadHeight">
+    <BasePieceGraphics CommandParameter="bead" CommandObject="DataContext!.ChangeMindCommand" TargetWidth="@gg1.BeadHeight">
         <CirclePiece NeedsWhiteBorders="true" MainColor="@bead.ColorChosen.Color" />
     </BasePieceGraphics>
 }
