--- a/Games/Mastermind/Blazor/Views/HintUI.razor
+++ b/Games/Mastermind/Blazor/Views/HintUI.razor
@@ -1,19 +1,19 @@
-﻿@using gg = Global;
-@using cc = CommonBasicLibraries.BasicDataSettingsAndProcesses.SColorString;
+﻿@using gg1 = Global;
+@using cc1 = CommonBasicLibraries.BasicDataSettingsAndProcesses.SColorString;
 @if (YourGuess == null)
 {
     return;
 }
 @for (int i = 0; i < YourGuess.HowManyBlacks; i++)
 {
-    <BasePieceGraphics TargetWidth="@gg.BeadHeight">
-        <CirclePiece NeedsWhiteBorders="true" MainColor="@cc.Black" />
+    <BasePieceGraphics TargetWidth="@gg1.BeadHeight">
+        <CirclePiece NeedsWhiteBorders="true" MainColor="@cc1.Black" />
     </BasePieceGraphics>
 }
 @for (int i = 0; i < YourGuess.HowManyAquas; i++)
 {
-    <BasePieceGraphics TargetWidth="@gg.BeadHeight">
-        <CirclePiece NeedsWhiteBorders="true" MainColor="@cc.Aqua" />
+    <BasePieceGraphics TargetWidth="@gg1.BeadHeight">
+        <CirclePiece NeedsWhiteBorders="true" MainColor="@cc1.Aqua" />
     </BasePieceGraphics>
 }
 @{
@@ -21,7 +21,7 @@
 }
 @for (int i = 0; i < LeftOvers; i++)
 {
-    <BasePieceGraphics TargetWidth="@gg.BeadHeight">
-        <CirclePiece NeedsWhiteBorders="true" MainColor="@cc.Transparent" />
+    <BasePieceGraphics TargetWidth="@gg1.BeadHeight">
+        <CirclePiece NeedsWhiteBorders="true" MainColor="@cc1.Transparent" />
     </BasePieceGraphics>
 }
