--- a/Standard/BasicGameFrameworkLibrary/wwwroot/basicgaming.css
+++ b/Standard/BasicGameFrameworkLibrary/wwwroot/basicgaming.css
@@ -24,16 +24,10 @@ fieldset {
     border-color: white;
     border-width: 2px;
     border-radius: 4px;
-    border-style: groove;
+    min-width: 0;
     display: inline-block;
-    box-sizing: initial;
-    border-image: initial;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-block-start: 0px;
-    padding-inline-start: 2px;
-    padding-inline-end: 0px;
-    padding-block-end: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 legend {
@@ -44,6 +38,7 @@ legend {
     line-height: initial;
     white-space: initial;
     border-bottom: none;
+    padding: 0;
 }
 
 .scrollableField {
